--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -59,3 +59,57 @@
   line-height: 30px;
   text-transform: uppercase;
 }
+
+.copy-overlay {
+  opacity: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s ease-in-out;
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+  position: absolute;
+}
+
+.copy-msg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  transform: scale(0.1);
+  opacity: 0;
+  color: white;
+  z-index: -1;
+}
+
+.copy-msg.show {
+  opacity: 1;
+  transform: scale(1);
+  z-index: 11;
+  transition: all 0.4s ease-in-out;
+}
+
+.copy-msg h1 {
+  font-weight: 400;
+  text-shadow: 1px 2px black;
+  background: rgba(255, 255, 255, 0.2);
+  width: 100%;
+  margin-bottom: 0;
+  padding: 1rem;
+}
+
+.copy-msg p {
+  font-size: 2rem;
+  font-weight: 100;
+}
