--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   padding: 0 13px;
   font-size: 22px;
   background-color: #eceff1;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Roboto', sans-serif;
   height: 100%;
   display: flex;
   align-items: center;
