Add a go back link to SingleColorPalette

--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -8,7 +8,17 @@
   margin-bottom: -3.5px;
 }
 
-.copy-button {
+.SingleColorPalette .ColorBox {
+  height: 50%;
+  width: 20%;
+}
+
+.ColorBox.go-back {
+  background-color: black;
+}
+
+.copy-button,
+.back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -28,6 +38,11 @@
   border: none;
   opacity: 0;
   transition: 0.25s;
+  text-decoration: none;
+}
+
+.back-button {
+  opacity: 1;
 }
 
 .ColorBox:hover .copy-button {
