--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
   width: 25%;
   height: 20%;
   margin: 0 auto;
@@ -6,14 +6,14 @@
   position: relative;
   cursor: pointer;
   margin-bottom: -3.5px;
-}
+} */
 
-.SingleColorPalette .ColorBox {
+/* .SingleColorPalette .ColorBox {
   height: 50%;
   width: 20%;
-}
+} */
 
-.ColorBox.go-back {
+/* .ColorBox.go-back {
   background-color: black;
 }
 
@@ -43,13 +43,13 @@
 
 .back-button {
   opacity: 1;
-}
+} */
 
-.ColorBox:hover .copy-button {
+/* .ColorBox:hover .copy-button {
   opacity: 1;
-}
+} */
 
-.box-content {
+/* .box-content {
   position: absolute;
   padding: 10px;
   width: 100%;
@@ -59,9 +59,9 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 12px;
-}
+} */
 
-.light-text {
+/* .light-text {
   color: white;
 }
 
@@ -81,9 +81,9 @@
   text-align: center;
   line-height: 30px;
   text-transform: uppercase;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
   opacity: 0;
   z-index: -1;
   width: 100%;
@@ -96,9 +96,9 @@
   transform: scale(50);
   z-index: 10;
   position: absolute;
-}
+} */
 
-.copy-msg {
+/* .copy-msg {
   position: fixed;
   left: 0;
   right: 0;
@@ -114,9 +114,9 @@
   opacity: 0;
   color: white;
   z-index: -1;
-}
+} */
 
-.copy-msg.show {
+/* .copy-msg.show {
   opacity: 1;
   transform: scale(1);
   z-index: 11;
@@ -135,4 +135,4 @@
 .copy-msg p {
   font-size: 2rem;
   font-weight: 100;
-}
+} */
